--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8"
+        <meta charset="UTF-8">
         <title>index for odin recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
         <h1>Odin recipes</h1>
+
+        <ul>
+            <li><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="recipes/brownies.html">Brownies</a></li>
+            <li><a href="recipes/vegchili.html">Veggie Chili</a></li>
+        </ul>
+        
     </body>
 
 </html>
