--- a/recipes/vegchili.html
+++ b/recipes/vegchili.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>veggie chili</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
